:building_construction: core app and webapi divided

--- a/TakeYourTicket/TakeYourTicket.Tests/TakeYourTicket.Tests.csproj
+++ b/TakeYourTicket/TakeYourTicket.Tests/TakeYourTicket.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
+    <ProjectReference Include="..\TakeYourTicket\TakeYourTicket.csproj" />
   </ItemGroup>
 
 </Project>
