:loud_sound: logs added

--- a/TakeYourTicket/TakeYourTicket.WebAPI/appsettings.json
+++ b/TakeYourTicket/TakeYourTicket.WebAPI/appsettings.json
@@ -6,8 +6,26 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "TakeYourTicket": "Server=localhost;Database=TakeYourTicket;User Id=sa;Password=P@ss@0rd!!!;"
-    }
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TakeYourTicket": "Server=localhost;Database=TakeYourTicket;User Id=sa;Password=P@ss@0rd!!!;"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  }
 }
